# rviz_plugin_manager

./: CMakeLists.txt  LICENSE.txt  README.md  package.xml  plugin_description.xml
include/rviz_plugin_manager/: plugin_manager.h
launch/: rviz_plugin_manager.launch
rviz_cfg/: rviz_plugin_manager.rviz
src/: plugin_manager.cpp
srv/: PluginGetConfig.srv  PluginLoad.srv  PluginProperty.srv  PluginSetConfig.srv  PluginUnload.srv
